[package]
name = "pulsar_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["full"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[dev-dependencies]
mockall = "0.13.1"
